adição do backend

--- a/Projeto-site/conteudo.html
+++ b/Projeto-site/conteudo.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/conteudo.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/conteudo.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
     <title>Colorful Art: Milhares de obras</title>
-    <link rel="shortcut icon" href="../img/palette.png">
+    <link rel="shortcut icon" href="img/palette.png">
 </head>
 
 <body>
     <div class="modal-galeria">
         <div class="modal-content flex">
-            <img src="../img/paintings/tarsila-do-amaral.jpg" id="modal_img">
+            <img src="img/paintings/tarsila-do-amaral.jpg" id="modal_img">
         </div>
         <div id="fechar_galeria">&times;</div>
     </div>
@@ -27,13 +27,13 @@
         <div class="menu">
             <div class="container flex">
                 <div class="logo">
-                    <a href="../index.html">
+                    <a href="index.html">
                         <h1>Colorful Art</h1>
                     </a>
-                    <img src="../img/brush.png" alt="">
+                    <img src="img/brush.png" alt="">
                 </div>
                 <div class="links-minimizado">
-                    <img src="../img/open-menu.png" alt="">
+                    <img src="img/open-menu.png" alt="">
                 </div>
                 <div class="search-menu flex">
                     <div>
@@ -59,35 +59,35 @@
             </div> -->
             <div class="pinturas-galeria flex">
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/botticelli-nascimento-venus.jpg" class="small_img">
+                    <img src="img/paintings/botticelli-nascimento-venus.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>O nascimento de Vênus (Botticelli)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/Klimt-beijo.jpg" class="small_img">
+                    <img src="img/paintings/Klimt-beijo.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>O beijo (Klimt)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/gogh-starry-night.jpg" class="small_img">
+                    <img src="img/paintings/gogh-starry-night.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>A noite estrelada (Van Gogh)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/munch-the-scream.jpg" class="small_img">
+                    <img src="img/paintings/munch-the-scream.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>O grito (Munch)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/magritte-filho-do-homem.jpg" class="small_img">
+                    <img src="img/paintings/magritte-filho-do-homem.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>O filho do homem (Magritte)</p>
@@ -96,35 +96,35 @@
             </div>
             <div class="pinturas-galeria flex">
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/munch-amor-e-dor.jpg" class="small_img">
+                    <img src="img/paintings/munch-amor-e-dor.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Amor e dor (Munch)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/vinci-monalisa.jpg" class="small_img">
+                    <img src="img/paintings/vinci-monalisa.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Monalisa (Da Vinci)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/bellini-madonna-with-child.jpg" class="small_img">
+                    <img src="img/paintings/bellini-madonna-with-child.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Madonna with a child (Bellini)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/picasso-vieux.jpg" class="small_img">
+                    <img src="img/paintings/picasso-vieux.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Velho guitarrista cego (Picasso)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/bouguereau-aurora.jpg" class="small_img">
+                    <img src="img/paintings/bouguereau-aurora.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>A Aurora (Bouguereau)</p>
@@ -133,35 +133,35 @@
             </div>
             <div class="pinturas-galeria flex">
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/duccio-maesta.jpg" class="small_img">
+                    <img src="img/paintings/duccio-maesta.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Maesta (Duccio)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/gogh-noite-estrelado-sobre-rodano.jpg" class="small_img">
+                    <img src="img/paintings/gogh-noite-estrelado-sobre-rodano.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>A noite estrelada sobre ródano (Van Gogh)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/munch-melancholy.jpg" class="small_img">
+                    <img src="img/paintings/munch-melancholy.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Melancholy (Munch)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/picasso-jacqueline-com-flores.jpg" class="small_img">
+                    <img src="img/paintings/picasso-jacqueline-com-flores.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Jacqueline com flores (Picasso)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/gogh-amendoeira-em-flor.jpg" class="small_img">
+                    <img src="img/paintings/gogh-amendoeira-em-flor.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Amendoeira em flor (Van Gogh)</p>
@@ -170,35 +170,35 @@
             </div>
             <div class="pinturas-galeria flex">
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/munch-kiss-by-the-window.jpg" class="small_img">
+                    <img src="img/paintings/munch-kiss-by-the-window.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Kiss by the Window (Munch)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/da-forli-music-making-angel.jpg" class="small_img">
+                    <img src="img/paintings/da-forli-music-making-angel.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Music making angel (Da Forli)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/dali-persistencia-da-memoria.jpg" class="small_img">
+                    <img src="img/paintings/dali-persistencia-da-memoria.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Persistencia da memória (Dali)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/grego-aquiles-ajax-jogando-damas.jpg" class="small_img">
+                    <img src="img/paintings/grego-aquiles-ajax-jogando-damas.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Aquiles jogando ajax jogando damas (Arte na Grécia)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/giotto-lamentation.jpg" class="small_img">
+                    <img src="img/paintings/giotto-lamentation.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Lamentation (Giotto)</p>
@@ -207,35 +207,35 @@
             </div>
             <div class="pinturas-galeria flex">
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/michelangelo-criacao-adao.jpg" class="small_img">
+                    <img src="img/paintings/michelangelo-criacao-adao.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>A criação de Adão (Michelangelo)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/monet-impressao.jpg" class="small_img">
+                    <img src="img/paintings/monet-impressao.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Impressão, nascer do sol (Monet)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/melozzo-da-forli-anjo.jpg" class="small_img">
+                    <img src="img/paintings/melozzo-da-forli-anjo.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>O Anjo (Da Forli)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/magritte-traicao-das-imagens.jpg" class="small_img">
+                    <img src="img/paintings/magritte-traicao-das-imagens.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>A traição das imagens (Magritte)</p>
                     </div>
                 </div>
                 <div class="card-pesquisa">
-                    <img src="../img/paintings/magritte-les-amants.jpg" class="small_img">
+                    <img src="img/paintings/magritte-les-amants.jpg" class="small_img">
                     <div class="hover-info flex">
                         <i class="fas fa-heart"></i>
                         <p>Os Amantes (Magritte)</p>
@@ -309,23 +309,23 @@
                         <ul>
                             <li>
                                 <a href="https://www.facebook.com/giwkiss/" target="_blank">
-                                    <img src="../img/facebook.png" alt="facebook">
+                                    <img src="img/facebook.png" alt="facebook">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/nuvemexotica/?hl=pt-br" target="_blank">
-                                    <img src="../img/instagram.png" alt="instagram">
+                                    <img src="img/instagram.png" alt="instagram">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/NuvemExotica" target="_blank">
-                                    <img src="../img/twitter.png" alt="twitter">
+                                    <img src="img/twitter.png" alt="twitter">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCc0SGr_WWw9t4iKfi2NP6KQ?view_as=subscriber"
                                     target="_blank">
-                                    <img src="../img/youtube.png" alt="youtube">
+                                    <img src="img/youtube.png" alt="youtube">
                                 </a>
                             </li>
                         </ul>
@@ -333,7 +333,7 @@
                     <div class="email">
                         <h4>Contate-nos</h4>
                         <a href="mailto:gisele.flor@bandtec.com.br">
-                            <img src="../img/email.png" alt="">
+                            <img src="img/email.png" alt="">
                             <span>gisele.flor@bandtec.com.br</span>
                         </a>
                     </div>
@@ -352,7 +352,7 @@
         <div class="modal">
             <button class="fechar">&times;</button>
             <h2>Login</h2>
-            <img src="../img/palette.png" alt="tela">
+            <img src="img/palette.png" alt="tela">
             <form>
                 <input type="text" class="input" placeholder="E-mail">
                 <div class="border-input"></div>
@@ -372,12 +372,12 @@
             <button class="fechar">&times;</button>
 
             <div class="img-cadastro">
-                <img src="../img/grito-editada.png" alt="">
+                <img src="img/grito-editada.png" alt="">
             </div>
 
             <form>
                 <h2>Faça parte da comunidade Colorful Art</h2>
-                <img src="../img/tela.png" alt="paleta">
+                <img src="img/tela.png" alt="paleta">
 
                 <ul id="mensagem_erro" class="error"></ul>
 
@@ -402,9 +402,9 @@
 
     <!--MODAL GALERIA PINTURAS-->
 
-    <script src="../js/modal.js"></script>
-    <script src="../js/validacao_form.js"></script>
-    <script src="../js/animacoes.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/validacao_form.js"></script>
+    <script src="js/animacoes.js"></script>
 </body>
 
 </html>
