--- a/Projeto-site/obras.html
+++ b/Projeto-site/obras.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/artistas.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/obras.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Nothing+You+Could+Do&display=swap"
         rel="stylesheet">
 
-    <title>Colorful Art: Artistas</title>
-    <link rel="shortcut icon" href="../img/palette.png">
+    <title>Colorful Art: Obras</title>
+    <link rel="shortcut icon" href="img/palette.png">
 </head>
 
 <body>
@@ -20,15 +20,15 @@
         <div class="menu">
             <div class="container">
                 <div class="logo">
-                    <a href="../index.html">
+                    <a href="index.html">
                         <h1>Colorful Art</h1>
                     </a>
-                    <img src="../img/brush.png" alt="">
+                    <img src="img/brush.png" alt="">
                 </div>
                 <div class="menu-mini">
-                    <img src="../img/menu.png" alt="">
+                    <img src="img/menu.png" alt="">
                     <ul class="sub-menu flex">
-                        <li><a href="../index.html">Início</a></li>
+                        <li><a href="index.html">Início</a></li>
                         <li><a href="obras.html">Obras</a></li>
                         <li><a href="artistas.html">Artistas</a></li>
                         <li>Fazer Login</li>
@@ -38,13 +38,13 @@
                 <nav class="links navegacao">
                     <ul>
                         <li>
-                            <a href="../index.html">Início</a>
+                            <a href="index.html">Início</a>
                         </li>
                         <li>
-                            <a href="obras.html">Obras</a>
+                            <a href="obras.html" class="page_atual">Obras</a>
                         </li>
                         <li>
-                            <a href="artistas.html" class="page_atual">Artistas</a>
+                            <a href="artistas.html">Artistas</a>
                         </li>
                     </ul>
                 </nav>
@@ -66,7 +66,7 @@
 
         <section class="title">
             <div class="text">
-                <h2 data-digita>Conheça os maiores artistas de todos os tempos em um só lugar</h2>
+                <h2 data-digita> Explore as maiores obras de todos os tempos em um só lugar</h2>
             </div>
         </section>
 
@@ -77,19 +77,18 @@
                 <div class="search">
                     <input type="text" class="busca" placeholder="Buscar">
                     <button class="busca-botao">
-                        <img src="../img/search.png" alt="busca">
+                        <img src="img/search.png" alt="">
                     </button>
                 </div>
             </div>
         </section>
 
-        <!--ARTISTAS-->
+        <!--ARTE POR PERIODO-->
         <section class="periodos-artisticos">
             <div class="container">
-
                 <h2>
                     <button class="filtrar-search">
-                        <img src="../img/filter.png" alt="filtrar pesquisa">
+                        <img src="img/filter.png" alt="filtrar pesquisa">
                     </button>
                     ESCOLHA UMA CATEGORIA
                 </h2>
@@ -97,38 +96,62 @@
                 <ul>
                     <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
-                            <img src="../img/paintings/Leonardo-da-Vinci.jpg">
+                            <img src="img/paintings/gogh-starry-night.jpg">
+                            <a href="html/conteudo.html">
+                                <div class="mov-nome">
+                                    <h3>Pinturas</h3>
+                                </div>
+                            </a>
+                        </div>
+                    </li>
+                    <li class="mov-card" data-anime="left">
+                        <div class="mov-foto">
+                            <img src="img/michelangelo-pieta.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Top Artistas</h3>
+                                <h3>Esculturas</h3>
                             </div>
                         </div>
                     </li>
                     <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
-                            <img src="../img/paintings/susano-correia.jpg">
+                            <img src="img/draw.png" alt="">
                             <div class="mov-nome">
-                                <h3>Artistas Revelação</h3>
+                                <h3>Desenhos</h3>
                             </div>
                         </div>
                     </li>
                     <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
-                            <img src="../img/paintings/tarsila-do-amaral.jpg">
+                            <img src="img/gravura.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Artistas Nacionais</h3>
+                                <h3>Gravuras</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="mov-card" data-anime="left">
+                        <div class="mov-foto">
+                            <img src="img/KISS.jpg" alt="">
+                            <div class="mov-nome">
+                                <h3>Artesanatos</h3>
                             </div>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
-    </main>
 
-    <!--FRASE-->
-    <div class="frase">
-        <q>Nenhum grande artista vê as coisas como realmente são. Caso contrário, deixaria de ser um artista.</q>
-        <span>Oscar Wilde</span>
-    </div>
+        <section class="divulgacao">
+            <div class="container">
+                <div class="conteudo-divulgacao">
+                    <h2>Gostaria de ver seus trabalhos artísticos publicados na Colorful Art?</h2>
+                    <strong>Faça Login ou Crie sua conta e</strong>
+                    <h3 class="botao-principal">
+                        <a href="#">Saiba mais</a>
+                    </h3>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <!--RODAPÉ-->
     <footer>
@@ -188,23 +211,23 @@
                         <ul>
                             <li>
                                 <a href="https://www.facebook.com/giwkiss/" target="_blank">
-                                    <img src="../img/facebook.png" alt="">
+                                    <img src="img/facebook.png" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.instagram.com/nuvemexotica/?hl=pt-br" target="_blank">
-                                    <img src="../img/instagram.png" alt="">
+                                    <img src="img/instagram.png" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://twitter.com/NuvemExotica" target="_blank">
-                                    <img src="../img/twitter.png" alt="">
+                                    <img src="img/twitter.png" alt="">
                                 </a>
                             </li>
                             <li>
                                 <a href="https://www.youtube.com/channel/UCc0SGr_WWw9t4iKfi2NP6KQ?view_as=subscriber"
                                     target="_blank">
-                                    <img src="../img/youtube.png" alt="">
+                                    <img src="img/youtube.png" alt="">
                                 </a>
                             </li>
                         </ul>
@@ -212,7 +235,7 @@
                     <div class="email">
                         <h4>Contate-nos</h4>
                         <a href="mailto:gisele.flor@bandtec.com.br">
-                            <img src="../img/email.png" alt="">
+                            <img src="img/email.png" alt="">
                             <span>gisele.flor@bandtec.com.br</span>
                         </a>
                     </div>
@@ -231,7 +254,7 @@
         <div class="modal">
             <button class="fechar">&times;</button>
             <h2>Login</h2>
-            <img src="../img/palette.png" alt="tela">
+            <img src="img/palette.png" alt="tela">
             <form>
                 <input type="text" class="input" placeholder="E-mail">
                 <div class="border-input"></div>
@@ -251,12 +274,12 @@
             <button class="fechar">&times;</button>
 
             <div class="img-cadastro">
-                <img src="../img/grito-editada.png" alt="">
+                <img src="img/grito-editada.png" alt="">
             </div>
 
             <form>
                 <h2>Faça parte da comunidade Colorful Art</h2>
-                <img src="../img/tela.png" alt="paleta">
+                <img src="img/tela.png" alt="paleta">
 
                 <ul id="mensagem_erro" class="error"></ul>
 
@@ -279,10 +302,9 @@
         </div>
     </div>
 
-    <script src="../js/modal.js"></script>
-    <script src="../js/validacao_form.js"></script>
-    <script src="../js/animacoes.js"></script>
-
+    <script src="js/modal.js"></script>
+    <script src="js/validacao_form.js"></script>
+    <script src="js/animacoes.js"></script>
 
 </body>
 
