--- a/Projeto-site/index.html
+++ b/Projeto-site/index.html
@@ -32,8 +32,8 @@
                         <img src="img/menu.png" alt="">
                         <ul class="sub-menu flex">
                             <li><a href="index.html">Início</a></li>
-                            <li><a href="html/obras.html">Obras</a></li>
-                            <li><a href="html/artistas.html">Artistas</a></li>
+                            <li><a href="obras.html">Obras</a></li>
+                            <li><a href="artistas.html">Artistas</a></li>
                             <li><a href="#">Fazer Login</a></li>
                             <li><a href="#">Criar uma conta</a></li>
                         </ul>
@@ -45,10 +45,10 @@
                                 <a href="index.html" class="page_atual">Início</a>
                             </li>
                             <li>
-                                <a href="html/obras.html">Obras</a>
+                                <a href="obras.html">Obras</a>
                             </li>
                             <li>
-                                <a href="html/artistas.html">Artistas</a>
+                                <a href="artistas.html">Artistas</a>
                             </li>
                         </ul>
                     </nav>
@@ -175,7 +175,7 @@
                                 Você é uma pessoa audaciosa e naturalmente líder! Que tal conhecer mais sobre o
                                 movimento do renascimento?</p>
                             <h3 class="botao-principal">
-                                <a href="html/conteudo.html">Ver obras</a>
+                                <a href="conteudo.html">Ver obras</a>
                             </h3>
                         </div>
                     </div>
@@ -184,7 +184,7 @@
                     <h1 class="title-result-quiz">EXPRESSIONISMO</h1>
                     <div class="content-result-quiz flex">
                         <div class="image-result-quiz">
-                            <img src="img/paintings/munch-the-scream.jpg">
+                            <img src="paintings/munch-the-scream.jpg">
                         </div>
                         <div class="text-result-quiz">
                             <p>Assim como a arte expressionista, você é extremamente intenso, e cheio de carga
@@ -193,7 +193,7 @@
                                 uma pessoa empática e perceptiva! Venha sentir as obras do movimento expressionista!
                             </p>
                             <h3 class="botao-principal">
-                                <a href="html/conteudo.html">Ver obras</a>
+                                <a href="conteudo.html">Ver obras</a>
                             </h3>
                         </div>
                     </div>
@@ -202,7 +202,7 @@
                     <h1 class="title-result-quiz">SURREALISMO</h1>
                     <div class="content-result-quiz flex">
                         <div class="image-result-quiz">
-                            <img src="img/paintings/magritte-filho-do-homem.jpg">
+                            <img src="paintings/magritte-filho-do-homem.jpg">
                         </div>
                         <div class="text-result-quiz">
                             <p>Assim como no surrealismo, você é uma pessoa espontânea e de imaginação fértil!
@@ -210,7 +210,7 @@
                                 surrealismo!
                             </p>
                             <h3 class="botao-principal">
-                                <a href="html/conteudo.html">Ver obras</a>
+                                <a href="conteudo.html">Ver obras</a>
                             </h3>
                         </div>
                     </div>
@@ -227,7 +227,7 @@
                                 conhecer?
                             </p>
                             <h3 class="botao-principal">
-                                <a href="html/conteudo.html">Ver obras</a>
+                                <a href="conteudo.html">Ver obras</a>
                             </h3>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                                 as obras do movimento impressionista na Colorful Art!
                             </p>
                             <h3 class="botao-principal">
-                                <a href="html/conteudo.html">Ver obras</a>
+                                <a href="conteudo.html">Ver obras</a>
                             </h3>
                         </div>
                     </div>
@@ -322,7 +322,7 @@
                     </ul>
                 </div>
                 <h3 class="botao-principal">
-                    <a href="html/obras.html">Ver mais obras</a>
+                    <a href="obras.html">Ver mais obras</a>
                 </h3>
             </div>
         </section>
@@ -387,7 +387,7 @@
                     </ul>
                 </div>
                 <h3 class="botao-principal">
-                    <a href="html/artistas.html">Ver mais artistas</a>
+                    <a href="artistas.html">Ver mais artistas</a>
                 </h3>
             </div>
         </section>
@@ -408,7 +408,7 @@
                         <h4>Obras</h4>
                         <ul>
                             <li>
-                                <a href="html/conteudo.html">Pintura</a>
+                                <a href="conteudo.html">Pintura</a>
                             </li>
                             <li>
                                 <a href="">Escultura</a>
