--- a/Projeto-site/index.html
+++ b/Projeto-site/index.html
@@ -53,7 +53,7 @@
                         </ul>
                     </nav>
 
-                    <nav class="links autenticacao">
+                    <nav class="links autenticacao" id="autenticacao">
                         <li>
                             <a class="botao" id="login_acesso">Login</a>
                         </li>
@@ -184,7 +184,7 @@
                     <h1 class="title-result-quiz">EXPRESSIONISMO</h1>
                     <div class="content-result-quiz flex">
                         <div class="image-result-quiz">
-                            <img src="paintings/munch-the-scream.jpg">
+                            <img src="img/paintings/munch-the-scream.jpg">
                         </div>
                         <div class="text-result-quiz">
                             <p>Assim como a arte expressionista, você é extremamente intenso, e cheio de carga
@@ -202,7 +202,7 @@
                     <h1 class="title-result-quiz">SURREALISMO</h1>
                     <div class="content-result-quiz flex">
                         <div class="image-result-quiz">
-                            <img src="paintings/magritte-filho-do-homem.jpg">
+                            <img src="img/paintings/magritte-filho-do-homem.jpg">
                         </div>
                         <div class="text-result-quiz">
                             <p>Assim como no surrealismo, você é uma pessoa espontânea e de imaginação fértil!
@@ -554,7 +554,7 @@
 
 
     <script>
-        // SCRIPT EFEITO [DATA-ANIME] DA SESSÃO APRESENTAÇÃO, COM UM DELAY MAIOR PARA  SE ADAPTAR MELHOR A PÁGINA.
+        // SCRIPT EFEITO [DATA-ANIME] DA SESSÃO APRESENTAÇÃO, COM UM DELAY MAIOR PARA SE ADAPTAR MELHOR A PÁGINA.
 
         const target = document.querySelectorAll('[data-anime]');
 
