--- a/Projeto-site/obras.html
+++ b/Projeto-site/obras.html
@@ -97,7 +97,7 @@
                     <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
                             <img src="img/paintings/gogh-starry-night.jpg">
-                            <a href="html/conteudo.html">
+                            <a href="conteudo.html">
                                 <div class="mov-nome">
                                     <h3>Pinturas</h3>
                                 </div>
@@ -277,7 +277,7 @@
                 <img src="img/grito-editada.png" alt="">
             </div>
 
-            <form>
+            <form action="http://localhost:3333/users" method="POST" id='form_cad'>
                 <h2>Faça parte da comunidade Colorful Art</h2>
                 <img src="img/tela.png" alt="paleta">
 
@@ -297,7 +297,7 @@
                 <input type="password" class="input" placeholder="Confirmar senha" id="confirma_senha">
                 <div class="border-input"></div>
 
-                <button type="submit" class="enter" onclick="cadastrar()">CADASTRAR-SE</button>
+                <button type="submit" class="enter">CADASTRAR-SE</button>
             </form>
         </div>
     </div>
